Fix: replace visibility with display:none

--- a/assets/main.css
+++ b/assets/main.css
@@ -364,7 +364,7 @@ to {
         font-size: 60px;
     }
     .scrollicon {
-        visibility: hidden;
+        display: none;
         height: 0px;
     }
     .intro {
@@ -464,7 +464,7 @@ to {
     }
     
     .scrollicon {
-        visibility: hidden;
+        display: none;
     }
 
 }
